# basicppmsa

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  README.md
cmake/: BasiCppMSAConfig.cmake.in  CompilerFlags.cmake
cmake/modules/: CompilerFlags.cmake
include/basicppmsa/: InterruptHandler.hpp  MainServiceController.hpp  RuntimeUtils.hpp
include/cppmsa/: InterruptHandler.h  MainServiceController.h  RuntimeUtils.h
include/msabase/: InterruptHandler.hpp  MainServiceController.hpp  RuntimeUtils.hpp
samples/: CMakeLists.txt
samples/src/: example.cpp
src/: MainServiceController.cc  MainServiceController.cpp
src/base/: BasicController.cc  BasicController.cpp  BasicController.h  BasicController.hpp  NetworkUtils.cc  NetworkUtils.cpp  NetworkUtils.h  NetworkUtils.hpp
src/base/core/: Controller.h  Controller.hpp  stdDef.hpp
tests/: CMakeLists.txt
tests/src/: example.cpp  testDeploy.cc  test_deploy.cpp
